<resources>
    <string name="app_name">QuizApp</string>
    <string name="start">Start</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="welcome_to_quiz_app">Welcome</string>
    <string name="quiz_app">Quiz App !</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="trophy_image_desc">trophy image</string>
    <string name="congratulations">Congratulations</string>
    <string name="finish">FINISH</string>
</resources>