<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="155dp"
        android:layout_height="160dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/trophy_image_desc"
        android:src="@drawable/trophy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Username"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Your Score is 9 out of 10"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@android:color/white"
        android:layout_marginTop="20dp"
        android:text="@string/finish"
        android:textColor="@color/design_default_color_primary"
        android:textSize="22sp"
        android:textStyle="bold"/>
</LinearLayout>